istio/istio-ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - '*.<<okteto-subdomain>>'
  rules:
  - host: '*.<<okteto-subdomain>>'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: istio-ingress
            port:
              number: 80
